WBNP-107 Ipad 2 navigation fix, navigation on mobile and tblet same by the latest design..., the main css filter displaying fixed,...

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -59,9 +59,10 @@ a.nav-link {
   }
 }
 .desktop-filter{
-@media (min-width: 1024px) {
+@media (min-width: 1030px) {
   display: block;
 }
+  display: none;
 }
 
 .page-enter-active, .page-leave-active {
